feat 🎨: add blog article list

--- a/index.html
+++ b/index.html
@@ -25,26 +25,134 @@
       <nav class="d-flex flex-wrap justify-content-between align-items-center">
         <a class="logo fw-normal" href="/">Weird Coon</a>
         <ul class="ps-0 m-0 d-none d-md-flex">
-          <li>
-            <a href="/">Home</a>
-          </li>
-          <li>
-            <a href="/">Blogs</a>
-          </li>
-          <li>
-            <a href="/">Category</a>
-          </li>
-          <li>
-            <a href="/">About me</a>
-          </li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/">Blogs</a></li>
+          <li><a href="/">Category</a></li>
+          <li><a href="/">About me</a></li>
         </ul>
         <button class="search-button">Search</button>
       </nav>
     </header>
 
     <!-- Page content -->
-    <main class="main-content">
+    <main class="main-content px-4 px-md-5">
+      <div class="page-title">
+        <h1>Articles</h1>
+      </div>
 
+      <div class="grid-wrap">
+        <div class="grid-column">
+          <article class="article-item">
+            <a class="article-img-wrap" href="/">
+              <div class="article-img">
+                <img src="./assets/img/buiding.jpg">
+              </div>
+            </a>
+            <a href="/" class="article-category">Technology</a>
+            <a href="/" class="article-title">
+              <h3>Understanding Ethereum Token Standards</h3>
+            </a>
+            <p class="article-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque hendrerit
+              fringilla enim, ut scelerisque dui. In hac habitasse platea dictumst. Etiam malesuada varius purus, ut
+              consectetur dolor cursus quis. Vestibulum quis purus viverra, lobortis sapien quis, fringilla eros.
+              Integer justo eros, sollicitudin vitae varius mattis,…
+            </p>
+          </article>
+
+          <article class="article-item">
+            <a class="article-img-wrap" href="/">
+              <div class="article-img article-img--square">
+                <img src="./assets/img/foods.jpg">
+              </div>
+            </a>
+            <a href="/" class="article-category">Cooking, Foods</a>
+            <a href="/" class="article-title">
+              <h3> Heartwarming Dishes That Will Lighten Up Your Day & Night</h3>
+            </a>
+            <p class="article-description">
+              In hac habitasse platea dictumst. Etiam malesuada varius purus, understanding
+              Ethereum Token Standards, ut consectetur dolor cursus quis. Sollicitudin vitae varius mattis,…
+            </p>
+          </article>
+        </div>
+
+        <div class="grid-column">
+          <article class="article-item">
+            <a class="article-img-wrap" href="/">
+              <div class="article-img article-img--square">
+                <img src="./assets/img/foods2.jpg">
+              </div>
+            </a>
+            <a href="/" class="article-category">Cooking, Foods</a>
+            <a href="/" class="article-title">
+              <h3> Heartwarming Dishes That Will Lighten Up Your Day & Night</h3>
+            </a>
+            <p class="article-description">
+              In hac habitasse platea dictumst. Etiam malesuada varius purus, understanding
+              Ethereum Token Standards, ut consectetur dolor cursus quis. Sollicitudin vitae varius mattis,…
+            </p>
+          </article>
+
+          <article class="article-item">
+            <a class="article-img-wrap" href="/">
+              <div class="article-img">
+                <img src="./assets/img/party.jpg">
+              </div>
+            </a>
+            <a href="/" class="article-category">Entertainment</a>
+            <a href="/" class="article-title">
+              <h3>The Wild Bunch & American Graffiti Actor Bo Hopkins Has Passed Away At 80</h3>
+            </a>
+            <p class="article-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque hendrerit
+              fringilla enim, ut scelerisque dui. Understanding Ethereum Token Standards. In hac habitasse platea
+              dictumst. Etiam malesuada varius purus, ut
+              consectetur dolor cursus quis. Sollicitudin vitae varius mattis,…
+            </p>
+          </article>
+        </div>
+
+        <div class="grid-column">
+          <article class="article-item">
+            <a class="article-img-wrap" href="/">
+              <div class="article-img">
+                <img src="./assets/img/laptop.jpg">
+              </div>
+            </a>
+            <a href="/" class="article-category">Entertainment</a>
+            <a href="/" class="article-title">
+              <h3>The Wild Bunch & American Graffiti Actor Bo Hopkins Has Passed Away At 80</h3>
+            </a>
+            <p class="article-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque hendrerit
+              fringilla enim, ut scelerisque dui. Understanding Ethereum Token Standards. In hac habitasse platea
+              dictumst. Etiam malesuada varius purus, ut
+              consectetur dolor cursus quis. Sollicitudin vitae varius mattis,…
+            </p>
+          </article>
+
+          <article class="article-item">
+            <a class="article-img-wrap" href="/">
+              <div class="article-img">
+                <img src="./assets/img/fashion.jpg">
+              </div>
+            </a>
+            <a href="/" class="article-category">Technology</a>
+            <a href="/" class="article-title">
+              <h3>Understanding Ethereum Token Standards</h3>
+            </a>
+            <p class="article-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque hendrerit
+              fringilla enim, ut scelerisque dui. In hac habitasse platea dictumst. Etiam malesuada varius purus, ut
+              consectetur dolor cursus quis. Vestibulum quis purus viverra, lobortis sapien quis, fringilla eros.
+              Integer justo eros, sollicitudin vitae varius mattis,…
+            </p>
+          </article>
+        </div>
+      </div>
+
+      <ul class="pagination">
+        <li><span class="page page--current text-center">1</span></li>
+        <li><a class="page" href="/">2</a></li>
+        <li><a class="page page--next" href="/">Next</a></li>
+      </ul>
     </main>
 
     <footer class="page-footer d-flex px-4 px-md-5 py-0 py-md-4">
