chore: clone category page

--- a/index.html
+++ b/index.html
@@ -48,15 +48,17 @@
                 <img src="./assets/img/buiding.jpg">
               </div>
             </a>
-            <a href="/" class="article-category">Technology</a>
-            <a href="/" class="article-title">
-              <h3>Understanding Ethereum Token Standards</h3>
-            </a>
-            <p class="article-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque hendrerit
-              fringilla enim, ut scelerisque dui. In hac habitasse platea dictumst. Etiam malesuada varius purus, ut
-              consectetur dolor cursus quis. Vestibulum quis purus viverra, lobortis sapien quis, fringilla eros.
-              Integer justo eros, sollicitudin vitae varius mattis,…
-            </p>
+            <div class="article-item__content">
+              <a href="./pages/category.html" class="article-category">Technology</a>
+              <a href="./pages/blog.html" class="article-title">
+                <h3>Understanding Ethereum Token Standards</h3>
+              </a>
+              <p class="article-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque hendrerit
+                fringilla enim, ut scelerisque dui. In hac habitasse platea dictumst. Etiam malesuada varius purus, ut
+                consectetur dolor cursus quis. Vestibulum quis purus viverra, lobortis sapien quis, fringilla eros.
+                Integer justo eros, sollicitudin vitae varius mattis,…
+              </p>
+            </div>
           </article>
 
           <article class="article-item">
@@ -65,14 +67,16 @@
                 <img src="./assets/img/foods.jpg">
               </div>
             </a>
-            <a href="/" class="article-category">Cooking, Foods</a>
-            <a href="/" class="article-title">
-              <h3> Heartwarming Dishes That Will Lighten Up Your Day & Night</h3>
-            </a>
-            <p class="article-description">
-              In hac habitasse platea dictumst. Etiam malesuada varius purus, understanding
-              Ethereum Token Standards, ut consectetur dolor cursus quis. Sollicitudin vitae varius mattis,…
-            </p>
+            <div class="article-item__content">
+              <a href="./pages/category.html" class="article-category">Cooking, Foods</a>
+              <a href="./pages/blog.html" class="article-title">
+                <h3> Heartwarming Dishes That Will Lighten Up Your Day & Night</h3>
+              </a>
+              <p class="article-description">
+                In hac habitasse platea dictumst. Etiam malesuada varius purus, understanding
+                Ethereum Token Standards, ut consectetur dolor cursus quis. Sollicitudin vitae varius mattis,…
+              </p>
+            </div>
           </article>
         </div>
 
@@ -83,14 +87,16 @@
                 <img src="./assets/img/foods2.jpg">
               </div>
             </a>
-            <a href="/" class="article-category">Cooking, Foods</a>
-            <a href="/" class="article-title">
-              <h3> Heartwarming Dishes That Will Lighten Up Your Day & Night</h3>
-            </a>
-            <p class="article-description">
-              In hac habitasse platea dictumst. Etiam malesuada varius purus, understanding
-              Ethereum Token Standards, ut consectetur dolor cursus quis. Sollicitudin vitae varius mattis,…
-            </p>
+            <div class="article-item__content">
+              <a href="./pages/category.html" class="article-category">Cooking, Foods</a>
+              <a href="./pages/blog.html" class="article-title">
+                <h3> Heartwarming Dishes That Will Lighten Up Your Day & Night</h3>
+              </a>
+              <p class="article-description">
+                In hac habitasse platea dictumst. Etiam malesuada varius purus, understanding
+                Ethereum Token Standards, ut consectetur dolor cursus quis. Sollicitudin vitae varius mattis,…
+              </p>
+            </div>
           </article>
 
           <article class="article-item">
@@ -99,15 +105,17 @@
                 <img src="./assets/img/party.jpg">
               </div>
             </a>
-            <a href="/" class="article-category">Entertainment</a>
-            <a href="/" class="article-title">
-              <h3>The Wild Bunch & American Graffiti Actor Bo Hopkins Has Passed Away At 80</h3>
-            </a>
-            <p class="article-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque hendrerit
-              fringilla enim, ut scelerisque dui. Understanding Ethereum Token Standards. In hac habitasse platea
-              dictumst. Etiam malesuada varius purus, ut
-              consectetur dolor cursus quis. Sollicitudin vitae varius mattis,…
-            </p>
+            <div class="article-item__content">
+              <a href="./pages/category.html" class="article-category">Entertainment</a>
+              <a href="./pages/blog.html" class="article-title">
+                <h3>The Wild Bunch & American Graffiti Actor Bo Hopkins Has Passed Away At 80</h3>
+              </a>
+              <p class="article-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque hendrerit
+                fringilla enim, ut scelerisque dui. Understanding Ethereum Token Standards. In hac habitasse platea
+                dictumst. Etiam malesuada varius purus, ut
+                consectetur dolor cursus quis. Sollicitudin vitae varius mattis,…
+              </p>
+            </div>
           </article>
         </div>
 
@@ -118,15 +126,17 @@
                 <img src="./assets/img/laptop.jpg">
               </div>
             </a>
-            <a href="/" class="article-category">Entertainment</a>
-            <a href="/" class="article-title">
-              <h3>The Wild Bunch & American Graffiti Actor Bo Hopkins Has Passed Away At 80</h3>
-            </a>
-            <p class="article-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque hendrerit
-              fringilla enim, ut scelerisque dui. Understanding Ethereum Token Standards. In hac habitasse platea
-              dictumst. Etiam malesuada varius purus, ut
-              consectetur dolor cursus quis. Sollicitudin vitae varius mattis,…
-            </p>
+            <div class="article-item__content">
+              <a href="./pages/category.html" class="article-category">Entertainment</a>
+              <a href="./pages/blog.html" class="article-title">
+                <h3>The Wild Bunch & American Graffiti Actor Bo Hopkins Has Passed Away At 80</h3>
+              </a>
+              <p class="article-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque hendrerit
+                fringilla enim, ut scelerisque dui. Understanding Ethereum Token Standards. In hac habitasse platea
+                dictumst. Etiam malesuada varius purus, ut
+                consectetur dolor cursus quis. Sollicitudin vitae varius mattis,…
+              </p>
+            </div>
           </article>
 
           <article class="article-item">
@@ -135,15 +145,17 @@
                 <img src="./assets/img/fashion.jpg">
               </div>
             </a>
-            <a href="/" class="article-category">Technology</a>
-            <a href="/" class="article-title">
-              <h3>Understanding Ethereum Token Standards</h3>
-            </a>
-            <p class="article-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque hendrerit
-              fringilla enim, ut scelerisque dui. In hac habitasse platea dictumst. Etiam malesuada varius purus, ut
-              consectetur dolor cursus quis. Vestibulum quis purus viverra, lobortis sapien quis, fringilla eros.
-              Integer justo eros, sollicitudin vitae varius mattis,…
-            </p>
+            <div class="article-item__content">
+              <a href="./pages/category.html" class="article-category">Technology</a>
+              <a href="./pages/blog.html" class="article-title">
+                <h3>Understanding Ethereum Token Standards</h3>
+              </a>
+              <p class="article-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque hendrerit
+                fringilla enim, ut scelerisque dui. In hac habitasse platea dictumst. Etiam malesuada varius purus, ut
+                consectetur dolor cursus quis. Vestibulum quis purus viverra, lobortis sapien quis, fringilla eros.
+                Integer justo eros, sollicitudin vitae varius mattis,…
+              </p>
+            </div>
           </article>
         </div>
       </div>
