chore: font-family adjust & replace post link

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -17,14 +17,14 @@
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap" rel="stylesheet" />
 </head>
 
 <body>
   <div id="app">
     <header class="page-header px-md-5 py-3 py-md-0">
       <nav class="d-flex flex-wrap justify-content-between align-items-center">
-        <a class="logo fw-normal" href="/">Weird Coon</a>
+        <a class="logo" href="/">Weird Coon</a>
         <ul class="ps-0 m-0 d-none d-md-flex">
           <li><a href="/">Home</a></li>
           <li><a href="/">Blogs</a></li>
