--- a/pages/category.html
+++ b/pages/category.html
@@ -16,14 +16,14 @@
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap" rel="stylesheet" />
 </head>
 
 <body>
   <div id="app">
     <header class="page-header px-md-5 py-3 py-md-0">
       <nav class="d-flex flex-wrap justify-content-between align-items-center">
-        <a class="logo fw-normal" href="/">Weird Coon</a>
+        <a class="logo" href="/">Weird Coon</a>
         <ul class="ps-0 m-0 d-none d-md-flex">
           <li><a href="/">Home</a></li>
           <li><a href="/">Blogs</a></li>
@@ -48,7 +48,7 @@
       <div class="grid-wrap">
         <div class="grid-column">
           <article class="article">
-            <a class="article-wrap" href="/">
+            <a class="article-wrap" href="./blog.html">
               <div class="article-img">
                 <img src="../assets/img/buiding.jpg" />
               </div>
@@ -70,7 +70,7 @@
           </article>
 
           <article class="article">
-            <a class="article-wrap" href="/">
+            <a class="article-wrap" href="./blog.html">
               <div class="article-img article-img--square">
                 <img src="../assets/img/foods.jpg" />
               </div>
@@ -93,7 +93,7 @@
 
         <div class="grid-column">
           <article class="article">
-            <a class="article-wrap" href="/">
+            <a class="article-wrap" href="./blog.html">
               <div class="article-img article-img--square">
                 <img src="../assets/img/foods2.jpg" />
               </div>
@@ -114,7 +114,7 @@
           </article>
 
           <article class="article">
-            <a class="article-wrap" href="/">
+            <a class="article-wrap" href="./blog.html">
               <div class="article-img">
                 <img src="../assets/img/party.jpg" />
               </div>
@@ -140,7 +140,7 @@
 
         <div class="grid-column">
           <article class="article">
-            <a class="article-wrap" href="/">
+            <a class="article-wrap" href="./blog.html">
               <div class="article-img">
                 <img src="../assets/img/laptop.jpg" />
               </div>
@@ -164,7 +164,7 @@
           </article>
 
           <article class="article">
-            <a class="article-wrap" href="/">
+            <a class="article-wrap" href="./blog.html">
               <div class="article-img">
                 <img src="../assets/img/fashion.jpg" />
               </div>
