--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div id="app">
     <header class="page-header px-md-5 py-3 py-md-0">
       <nav class="d-flex flex-wrap justify-content-between align-items-center">
-        <a class="logo fw-normal" href="/">Weird Coon</a>
+        <a class="logo" href="/">Weird Coon</a>
         <ul class="ps-0 m-0 d-none d-md-flex">
           <li><a href="/">Home</a></li>
           <li><a href="/">Blogs</a></li>
@@ -48,7 +48,7 @@
       <div class="grid-wrap">
         <div class="grid-column">
           <article class="article">
-            <a class="article-wrap" href="/">
+            <a class="article-wrap" href="./pages/blog.html">
               <div class="article-img">
                 <img src="./assets/img/buiding.jpg" />
               </div>
@@ -70,7 +70,7 @@
           </article>
 
           <article class="article">
-            <a class="article-wrap" href="/">
+            <a class="article-wrap" href="./pages/blog.html">
               <div class="article-img article-img--square">
                 <img src="./assets/img/foods.jpg" />
               </div>
@@ -93,7 +93,7 @@
 
         <div class="grid-column">
           <article class="article">
-            <a class="article-wrap" href="/">
+            <a class="article-wrap" href="./pages/blog.html">
               <div class="article-img article-img--square">
                 <img src="./assets/img/foods2.jpg" />
               </div>
@@ -114,7 +114,7 @@
           </article>
 
           <article class="article">
-            <a class="article-wrap" href="/">
+            <a class="article-wrap" href="./pages/blog.html">
               <div class="article-img">
                 <img src="./assets/img/party.jpg" />
               </div>
@@ -140,7 +140,7 @@
 
         <div class="grid-column">
           <article class="article">
-            <a class="article-wrap" href="/">
+            <a class="article-wrap" href="./pages/blog.html">
               <div class="article-img">
                 <img src="./assets/img/laptop.jpg" />
               </div>
@@ -164,7 +164,7 @@
           </article>
 
           <article class="article">
-            <a class="article-wrap" href="/">
+            <a class="article-wrap" href="./pages/blog.html">
               <div class="article-img">
                 <img src="./assets/img/fashion.jpg" />
               </div>
