feat: add blockquote, em, u, s to blog post

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -111,7 +111,7 @@
         <p>
           Duis sollicitudin nibh et libero rhoncus ultricies. Maecenas risus
           ipsum, imperdiet ac luctus sit amet, volutpat nec libero. Fusce
-          mattis non nisi quis tincidunt. Donec dictum velit sed feugiat
+          mattis non nisi quis tincidunt. <em>Donec dictum velit</em> sed feugiat
           laoreet. Sed justo magna, sollicitudin et dignissim ac, venenatis at
           tortor. Sed finibus faucibus tincidunt. Mauris vel risus magna.
         </p>
@@ -127,17 +127,22 @@
 
         <p>
           Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-          posuere cubilia Curae; Proin mattis, erat at ultrices aliquam,
+          posuere <s>cubilia Curae</s>; Proin mattis, erat at ultrices aliquam,
           turpis nisi rutrum erat, eu finibus felis nisl ultricies mi. Aliquam
           quis interdum dui. <a href="">Vivamus mattis bibendum dolor</a>, vel varius ante
           facilisis at. Maecenas molestie vestibulum dui, vitae tempor massa
           mollis porta. Suspendisse id porta diam, in suscipit est. Phasellus
           lectus eros, dictum sed augue ac, mattis varius felis.
         </p>
+        <blockquote>
+          Your time is limited, so don’t waste it living someone else’s life.
+          <span>Steve Jobs</span>
+        </blockquote>
         <p>
           Nulla vel euismod eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacinia finibus
           ipsum vitae tempus. Nam vestibulum pretium leo a facilisis. Ut id tincidunt neque. Morbi sit amet varius
-          velit. Pellentesque eget metus et velit maximus placerat ut in quam. Pellentesque luctus ligula id ipsum
+          velit. Pellentesque eget metus et velit <u>maximus placerat ut in quam</u>. Pellentesque luctus ligula id
+          ipsum
           gravida, quis scelerisque mi congue. Morbi vehicula neque ex, non ultricies arcu ullamcorper sit amet. Morbi
           rutrum sem non tortor eleifend, quis scelerisque nulla cursus. Aliquam erat volutpat.
         </p>
