feat: add image figure to blog post

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -86,6 +86,21 @@
           <li>Nulla vitae elit libero, a pharetra augue.</li>
           <li>Donec id elit non mi porta gravida at eget metus.</li>
         </ul>
+        <p>Donec molestie metus a sagittis condimentum. Duis vulputate lectus massa, vel viverra sem interdum sit amet.
+          In pulvinar arcu id nisi eleifend, in placerat velit tempor. Sed volutpat orci nec velit cursus posuere. Nulla
+          congue mi sed enim venenatis, eu suscipit neque dictum. Integer nec eros nibh.
+        </p>
+
+        <figure>
+          <img alt="" src="../assets/img/neon.jpg" />
+          <figcaption>
+            Photo by
+            <a href="" target="_blank">Oliur Rahman</a>
+            on
+            <a href="" target="_blank">Unsplash</a>
+          </figcaption>
+        </figure>
+
         <p>
           Nulla vel euismod eros. Lorem ipsum dolor sit amet, consectetur
           adipiscing elit. <strong>Suspendisse lacinia finibus</strong> ipsum vitae tempus. Nam
